Implement missing integration tests